using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public static class Cache
{
    public static string IDLE_ANIM = "idle";
    public static string RUN_ANIM = "run";
    public static string WIN_ANIM = "win";
    public static string DIE_ANIM = "die";
    public static string DELIVERY_ANIM = "delivery";
    public static string JUMP_ANIM = "jump";
    public static WaitForSeconds fixTime = new WaitForSeconds(0.02f);
}
